[package]
name = "w-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.2.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
actix-rt = "2.8.0"
futures = "0.3.28"
bytes = "1.4.0"
bytestring = "1.3.0"
